# matamazom

./: CMakeLists.txt  README.md  amount_set.c  amount_set.h  main.c  makefile.txt  matamazom.c  matamazom.h
facebookTests/: main.c
tests/: matamazom_tests.c
